--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,26 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-html, body, #root {
+html, body {
     width: 100%;
     height: 100%;
 }
 
+#container {
+    width: 100vw;
+    height: 100vh;
+    background-color: #1B1B20;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
 #image {
-    width: 600px;
+    width: 800px;
     height: 400px;
     user-select: none;
     position: absolute;
